Welcome section now fixed - content scrolls over and covers it

--- a/Style/main.css
+++ b/Style/main.css
@@ -5,10 +5,20 @@ body {
 .welcome {
   margin-top: 70px;
   height: 80vh;
+  width: 100vw;
+  top: 0;
   background-color: white;
   background-image: url("../Media/Welcome_Image.jpg");
   background-size: cover;
+  position: fixed;
+  z-index: -1; /*Always on bottom*/
+}
+
+.welcome-placeholder {
+  margin-top: 70px;
+  height: 80vh;
   position: relative;
+  /*Same size as welcome section, just isn't static*/
 }
 
 .welcome-content {
@@ -51,6 +61,7 @@ body {
 }
 
 .statistics {
+  border-top: 1px solid grey;
   background-color: white;
 }
 
